[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Icons/22.png" type="Texture" id=1]
[ext_resource path="res://Sprites/cars/car_15.png" type="Texture" id=2]
[ext_resource path="res://Scences/car_in_shop.gd" type="Script" id=3]
[ext_resource path="res://fonts/Odin Rounded - Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Firework.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("firework:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "firework"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("firework:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 6, 9, 12, 15, 18, 21, 24 ]
}

[node name="car_in_shop" type="Node2D"]
script = ExtResource( 3 )

[node name="Car_Sprite" type="Sprite" parent="."]
position = Vector2( 120, 158.55 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="button_sprite" type="Sprite" parent="."]
position = Vector2( 120, 339.55 )
scale = Vector2( 0.35, 0.3 )
texture = ExtResource( 1 )

[node name="select_Button" type="Button" parent="button_sprite"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -211.0
margin_top = -95.0
margin_right = 209.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_car_lable" type="Label" parent="button_sprite"]
margin_left = -214.854
margin_top = -42.4404
margin_right = 210.146
margin_bottom = 33.5596
custom_fonts/font = SubResource( 1 )
text = "S E L E C T   C A R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="firework_animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/firework = SubResource( 3 )

[node name="firework" type="Sprite" parent="."]
visible = false
position = Vector2( 121, 209.5 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 5 )
hframes = 6
vframes = 5
frame = 1

[connection signal="button_up" from="button_sprite/select_Button" to="." method="_on_select_Button_button_up"]
[connection signal="animation_finished" from="firework_animator" to="." method="_on_firework_animator_animation_finished"]
